--- a/style.css
+++ b/style.css
@@ -654,7 +654,7 @@
         }
         
         .contact-label {
-            color: #EEEEEE;
+            color: #eeeeee;
             font-size: 0.9rem;
             text-transform: uppercase;
             letter-spacing: 1px;
@@ -769,3 +769,4 @@
             }
 
         }
+
