--- a/blog.css
+++ b/blog.css
@@ -257,7 +257,7 @@
 
 .date-modal {
     background: #e2e8f0;
-    color: #64748b;
+    color: #000000;
     padding: 0.5rem 1rem;
     border-radius: 20px;
     font-size: 0.9rem;
@@ -432,4 +432,5 @@
     .section-images-modal img {
         height: 250px;
     }
+
 }
